--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -11,7 +11,7 @@
 }
 
 .current-shadow{
-  box-shadow: 0 4px 4px rgba(#000, 0.2);
+  box-shadow: 0 2px 6px rgba(#000, 0.2);
 
 }
 
@@ -35,7 +35,7 @@ a.current-shadow{
   z-index: 9;
   background-color: #fff;
   margin-bottom: 72px;
-  padding-top: 56px;
+  padding-top: 72px;
 }
 
 .main-footer{
@@ -111,20 +111,57 @@ a.current-shadow{
     width: 100%;
   }
   &__item{
-    padding-top: 50px;
+    margin-top: 50px;
     max-width: 300px;
+    max-height: 600px;
     display: block;
     left: 50%;
-    max-height: 600px;
     position: fixed;
     top: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     vertical-align: middle;
-    width: 51.66667%;
+    // width: 51.66667%;
+    @include media-breakpoint-down(lg) {
+      max-width: 200px;
+      max-height: 400px;
+    }
+    @include media-breakpoint-down(md) {
+      max-width: 150px;
+      max-height: 300px;
+    }
+    &:before{
+      content: '';
+      position: absolute;
+      width: 96%;
+      height: 96%;
+      top: 2%;
+      left: 2%;
+      border-radius: 40px;
+      display: block;
+      background-color: transparent;
+      box-shadow: 0 40px 100px rgba(#000, 0.6);
+    }
   }
   &__info{
     position: relative;
     z-index: 9;
+  }
+  &__frame{
+    position: relative;
+    z-index: 99;
+  }
+  &__pic{
+    position: absolute;
+    z-index: 9;
+    left: 0;
+    top: 0;
+    width: 100%;
+    border-radius: 60px;
+    height: auto;
+    margin-top: -2px;
+    @include media-breakpoint-down(md) {
+      border-radius: 30px;
+    }
   }
 }
