--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -29,10 +29,12 @@
     right: 50%;
     margin-right: 10px;
     top: 0;
-    color: #fff;
     line-height: $size;
-    text-shadow: 0 1px 10px rgba(#000, 0.5);
   }
+}
+
+.bg-navbar{
+  background-color: rgba(#fff, 0.6);
 }
 
 .navbar-logo{
