--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,13 +1,9 @@
-*:focus{
-  outline: none;
-}
-
 ::-moz-selection {
-  background: rgba(darken($yellow, 40%), 0.4);
+  background: rgba(darken($yellow, 30%), 0.4);
 }
 
 ::selection {
-  background: rgba(darken($yellow, 40%), 0.4);
+  background: rgba(darken($yellow, 30%), 0.4);
 }
 
 .current-shadow{
@@ -106,22 +102,28 @@ a.current-shadow{
   &__clip{
     clip: rect(auto, auto, auto, auto);
     height: 100%;
-    position: absolute;
+    position: relative;
     top: 0;
     width: 100%;
+    @include media-breakpoint-up(md) {
+      position: absolute;
+    }
   }
   &__item{
-    margin-top: 50px;
     max-width: 300px;
     max-height: 600px;
     display: block;
-    left: 50%;
-    position: fixed;
-    top: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     vertical-align: middle;
+    position: relative;
     // width: 51.66667%;
+    @include media-breakpoint-up(md) {
+      left: 45%;
+      position: fixed;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      margin-top: 50px;
+    }
     @include media-breakpoint-down(lg) {
       max-width: 200px;
       max-height: 400px;
@@ -163,5 +165,17 @@ a.current-shadow{
     @include media-breakpoint-down(md) {
       border-radius: 30px;
     }
+  }
+}
+
+.dl-link{
+  background-color: rgba(#000, 0.05);
+  display: inline-block;
+  &__img{
+    width: 50px;
+    height: 50px;
+  }
+  &:hover{
+    background-color: rgba(#000, 0.1);
   }
 }
