--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -82,6 +82,10 @@ a.current-shadow{
   max-width: 600px;
 }
 
+.mw-400{
+  max-width: 400px;
+}
+
 .btn{
   box-shadow: 0 2px 4px rgba(#000, 0.2);
   &:hover{
