--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -44,3 +44,30 @@
   height: 40px;
   width: 40px;
 }
+
+.nav-ul-tabs{
+  overflow-y: hidden;
+  overflow-x: auto;
+  white-space: nowrap;
+  &__link{
+    display: inline-block;
+    position: relative;
+    &:after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 0;
+      height: 4px;
+      border-radius: 2px;
+      background-color: $main-color;
+      transition: width 0.3s, left 0.3s;
+    }
+    &--active{
+      &:after{
+        left: 0;
+        width: 100%;
+      }
+    }
+  }
+}
