--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $font-family-base: 'Fira San', sans-serif;
-$headings-font-family: 'Fira San', sans-serif;
+$headings-font-family: 'Oswald', sans-serif;
 $headings-font-weight: 400;
 
 $gray-100: #FAFCFD;
