--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -71,3 +71,86 @@
     }
   }
 }
+
+@keyframes menu {
+  0%{
+    opacity: 0;
+    top: 100%;
+  }
+  100%{
+    opacity: 1;
+    top: 110%;
+  }
+}
+
+.navbar-menu{
+  @include media-breakpoint-down(sm) {
+    display: none;
+    position: absolute;
+    top: 110%;
+    left: 5%;
+    width: 90%;
+    z-index: 99;
+    background-color: #fff;
+    box-shadow: 0 40px 100px rgba(#000, 0.6);
+    padding: 10px;
+    text-align: center;
+    transition: top 0.3s;
+    &--opened{
+      display: block;
+      animation: menu 0.3s;
+    }
+  }
+}
+
+$bar-width: 30px;
+$bar-height: 4px;
+$bar-spacing: 8px;
+
+.hamburger-menu,
+.hamburger-menu:after,
+.hamburger-menu:before {
+  width: $bar-width;
+  height: $bar-height;
+  border-radius: $bar-height;
+}
+
+.hamburger-menu {
+  position: relative;
+  background: $gray-800;
+  transition: all 0ms 300ms;
+  
+  &.animate {
+    background: #fff; 
+  }
+}
+
+.hamburger-menu:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: $bar-spacing;
+  background: $gray-800;
+  transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.hamburger-menu:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: $bar-spacing;
+  background: $gray-800;
+  transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.hamburger-menu.animate:after {
+  top: 0;
+  transform: rotate(45deg);
+  transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+}
+
+.hamburger-menu.animate:before {
+  bottom: 0;
+  transform: rotate(-45deg);
+  transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+}
