--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,5 +1,6 @@
 .side-nav{
   $size: 1rem;
+
   position: fixed;
   right: 1.2rem;
   top: 50%;
@@ -13,6 +14,12 @@
     background-color: #fff;
     margin-bottom: 0.5rem;
     position: relative;
+    @include media-breakpoint-down(md) {
+      width: $size/1.5;
+      height: $size/1.5;
+      opacity: 0.8;
+      margin-bottom: 1rem;
+    }
     &:hover, &.active{
      .side-nav__text{
         opacity: 1;
@@ -33,6 +40,9 @@
     background-color: rgba(#fff, 0.6);
     padding: 0 3px;
     border-radius: 3px;
+    @include media-breakpoint-down(md) {
+      display: none;
+    }
   }
 }
 
