--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -46,6 +46,14 @@
   }
 }
 
+.navbar-shadow{
+  box-shadow: 0 0 rgba(#000, 0);
+  transition: box-shadow 0.3s;
+  &--showed{
+    box-shadow: 0 3px 9px rgba(#000, 0.2);
+  }
+}
+
 .bg-navbar{
   background-color: rgba(#fff, 0.98);
 }
