--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $headings-font-weight: 400;
 $blue: #2B6BA4;
 $pink: #E53061;
 $yellow: #FDED35;
+$green: #43A047;
 $main-color: $pink;
 
 $gray-100: #fafafa;
@@ -22,6 +23,7 @@ $body-color: $gray-700;
 $link-color: $blue;
 $light: $gray-100;
 $primary: $blue;
+$success: $green;
 
 $h1-font-size: $font-size-base * 4;
 $h2-font-size: $font-size-base * 3.5;
