--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,8 @@ $font-family-base: 'Fira San', sans-serif;
 $headings-font-family: 'Oswald', sans-serif;
 $headings-font-weight: 400;
 
+$header-height: 72px;
+
 $blue: #2B6BA4;
 $pink: #E53061;
 $yellow: #FDED35;
