--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -145,3 +145,14 @@
     }
   }
 }
+
+.scroll-down{
+  background-color: rgba($main-color, 0.6);
+  position: absolute;
+  left: 50%;
+  margin-left: -16px;
+  bottom: 40px;
+  &:hover{
+    background-color: $main-color;
+  }
+}
