--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -90,7 +90,7 @@
     content: '';
     width: 100px;
     height: 30px;
-    background-image: url(/images/stick.svg);
+    background-image: url(../images/stick.svg);
     background-repeat: no-repeat;
     background-size: 100px 30px;
     position: absolute;
