--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -100,7 +100,7 @@
 }
 
 .bg-linger{
-  background: linear-gradient(to right, #ff4a5b, #ffc816);
+  background: linear-gradient(to right, #d24f5c, #d6a506);
 }
 
 .bg-mesto{
