--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,7 +6,7 @@ $header-height: 72px;
 
 $blue: #2B6BA4;
 $pink: #E53061;
-$yellow: #FDED35;
+$yellow: #f3d40c;
 $green: #43A047;
 $main-color: $pink;
 
