--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,6 +1,6 @@
 .top-main-block{
   margin-top: -$header-height;
-  background-image: url(../images/main-bg.jpg);
+  background-image: url(../images/main-bg.jpg); //rock.svg
   background-size: cover;
   background-position: center;
 }
