--- a/src/styles/_effects.scss
+++ b/src/styles/_effects.scss
@@ -44,3 +44,18 @@
 .portfolio-item-leave-active {
   height: 0!important;
 }
+
+.collapse-enter-active {
+  transition: all 0.1s ease-out;
+  transition-delay: 0.1s;
+}
+
+.collapse-leave-active {
+  transition: all 0.1s ease-in;
+}
+
+.collapse-enter,
+.collapse-leave-active {
+  opacity: 0;
+  transform: translateY(-10px);
+}
