--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -71,6 +71,7 @@ $btn-padding-x-sm: $input-btn-padding-x-sm;
 $btn-padding-y-lg: $input-btn-padding-y-lg;
 $btn-padding-x-lg: $input-btn-padding-x-lg;
 $btn-border-radius-lg: $border-radius-lg;
+$btn-font-weight: $font-weight-bold;
 
 $input-bg: rgba(#000, 0.05);
 $input-border-color: $input-bg;
