MST-3413 project changes

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -115,3 +115,9 @@
 .bg-eurasia{
   background: linear-gradient(to right, #4eb04f, #31459b);
 }
+
+.tag{
+  padding: 0.5rem 2rem;
+  border-radius: 3rem;
+  background-color: rgba(#000, 0.05);
+}
