--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -97,7 +97,7 @@
 }
 
 .bg-kyc{
-  background: linear-gradient(to right, #00c1a5, #0068ff);
+  background: linear-gradient(to right, #0068ff, #00c1a5);
 }
 
 .bg-linger{
@@ -113,7 +113,7 @@
 }
 
 .bg-eurasia{
-  background: linear-gradient(to right, #4eb04f, #31459b);
+  background: linear-gradient(to right, #31459b, #4eb04f);
 }
 
 .tag{
