MST-3312 nav styles

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -20,7 +20,7 @@
       opacity: 0.8;
       margin-bottom: 1rem;
     }
-    &:hover, &.active{
+    &:hover{
      .side-nav__text{
         opacity: 1;
         right: 100%;
