--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -38,7 +38,8 @@
     top: 0;
     line-height: $size;
     background-color: rgba(#fff, 0.6);
-    padding: 0 3px;
+    padding: 4px;
+    margin-top: -4px;
     border-radius: 3px;
     @include media-breakpoint-down(md) {
       display: none;
