--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -10,7 +10,7 @@
 
   width: $size;
   height: $size;
-  padding: 50px 30px;
+  padding: 30px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(#000, 0.1);
   position: relative;
