--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -94,11 +94,11 @@
 @keyframes menu {
   0%{
     opacity: 0;
-    top: 100%;
+    transform: translateY(-10px);
   }
   100%{
     opacity: 1;
-    top: 110%;
+    transform: translateY(0);
   }
 }
 
@@ -151,7 +151,7 @@ $bar-spacing: 8px;
   left: 0;
   bottom: $bar-spacing;
   background: $gray-800;
-  transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: bottom 0.2s 0.2s, transform 0.2s;
 }
 
 .hamburger-menu:after {
@@ -160,19 +160,19 @@ $bar-spacing: 8px;
   left: 0;
   top: $bar-spacing;
   background: $gray-800;
-  transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 0.2s 0.2s, transform 0.2s;
 }
 
 .hamburger-menu.animate:after {
   top: 0;
   transform: rotate(45deg);
-  transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+  transition: top 0.2s, transform 0.2s 0.2s;;
 }
 
 .hamburger-menu.animate:before {
   bottom: 0;
   transform: rotate(-45deg);
-  transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+  transition: bottom 0.2s, transform 0.2s 0.2s;;
 }
 
 .navbar-link{
