contacts changed numbers + in progress projects

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -134,6 +134,10 @@
     background: linear-gradient(to right, #007a89, #40bbcc);
 }
 
+.bg-ballsy {
+    background: linear-gradient(to right, #FD4848, #EE57B2);
+}
+
 .tag {
     padding: 0.4rem 2rem;
     border-radius: 3rem;
